# namada-mainnet-genesis

./: .gitignore  INFRA.md  MAINNET-GUIDE.md  README.md  combined_bond_data.json  combined_validator_data.json  combiner_bond.js  combiner_validator.js  convertbalances.js  fetchValidatorsData.js  package-lock.json  package.json  pyproject.toml  rick-bond.toml  validators_data.json
.github/: CODEOWNERS  pull_request_template.md
genesis/: parameters.toml  tokens.toml  transactions.toml  validity-predicates.toml
scripts/: README.md  make-mainnet-genesis.sh  rebuild.py  sanity-check.py  test.py  utils.py  validate-merge.py  validate-pr.py
transactions/: -bond.toml  0x0conan-bond.toml  0x0conan-validator.toml  0x4r45h-bond.toml  0x4r45h-validator.toml  0xjustin-bond.toml  2020DWG-validator.toml  22a435-bond.toml  3Dnt-bond.toml  5elementsnodes-bond.toml  5elementsnodes-validator.toml  Add Olexandr-bond.toml  Add msobh13 transactions  Akanimorex-bond.toml  AlanYoon71-bond.toml  AlanYoon71-validator.toml  Aleksandrbaka-bond.toml  Alex192777-bond.toml  AlexITProf-bond.toml  AlexITProf-validator.toml  AndrZHR-bond.toml  ArmanPosthuman-bond.toml  Armandduc  AutoStake-com-bond.toml  AutoStake-com-validator.toml  BATAROLOS  BRAT1507  Baptman59  BigBro-Validators-bond.toml  BlackBlocks-io-validator.toml  BlockDweller-bond.toml  BlockscapeLab-validator.toml  BrainCord-bond.toml  BrainCord-validator.toml  Brendan-Whispernode-validator.toml  Brightlystake-validator.toml  CGity  Cabbache-validator.toml  Campbell-validator.toml  Chris64110-bond.toml  (+552 more)
wasm/: checksums.json  (+24 more)
(+6 files in other folders)
